--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: rgb( 240,253,244);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
